docs: update readme

--- a/articles/will/规范.md
+++ b/articles/will/规范.md
@@ -68,6 +68,7 @@
     - refactor 重构
     - test 添加测试
     - chore 构建过程或辅助工具的变动
+    - update 更新旧功能
     - 提交信息为（fead: xxxxx提交的消息）
 - 提交前应该通过eslint的检测
 
