doc: 更新规范文章

--- a/articles/will/规范.md
+++ b/articles/will/规范.md
@@ -1,25 +1,24 @@
 # 定制一个自己的规范
+
 ## 代码篇
 - 变量声明使用e6的`let`或`const`
 - 命名规则
     - 大驼峰
-        - 组件名
-        - class名
-        - 构造函数名
+        - 组件
+        - 构造函数
     - 小驼峰
-        - 变量名
-        - 函数名
+        - 变量
+        - 函数
     - 下滑线
-        - css名
-        - @keyframe名
-        - 文件名
+        - css
+        - @keyframe
+        - 文件
     - 中滑线
         - `... 持续补充`
 - 组件内模块的引入顺序
     - 全局包
     - 组件
     - 工具函数
-    - 自定义模块
     - `... 持续补充`
 - 使用事件时，适当加入passive参数（addEventListeners的第三位参数）
 - 当在某些地方有可能出现问题时，应当有对应措施（使用`try catch`捕捉）
@@ -32,6 +31,7 @@
 - 在多人合作时，引入包比较小众的包时应当写一些说明
 - 权衡复杂度与耦合度
 
+
 ## 静态资源管理
 - 静态资源全部放置在根目录下的public文件夹内
     - 图片为`image`
@@ -39,31 +39,37 @@
     - `html`为`html`
     - `css`为`css`
     - `js`和`ts`为`script`
-    - 主入口文件将应该在`public`下，并且命名为`index.html`
+    - 单页面程序html文件应命名为`index.html`
 - 打包后的`js`、`html`、`css`要经过压缩，js分解大小，不能太大导致加载时间过长，也不太小，导致加载请求过多（`200kb - 500kb`）
-- 服务器对静态资源开启`gzip`压缩
-- 打包后较大的资源应当放在CDN服务器中
+- 服务器对静态资源开启`gzip`压缩（在webpack打包时使用compress-webpack-plugin打包资源为gz文件，然后由服务端返回）
 
 ## 错误篇
 - 全局错误应该由`window.onerror`来拦截并且处理
+- 使用框架提供的catch函数来手机出现的错误
+- 上报错误到服务器
 
 ## html篇
 - DOM的嵌套层级不应该超过20层
-- DOM的style应该少用
+- 行间style应该少用
 
 ## 性能篇
 - 合成小图片为雪碧图（老方法了）
 - 减少`script`的引入，合并小的`script`数量
-- 服务器开始`gzip`压缩
-- 大量数据计算使用`webwork`
-- `CDN`内容发布网络加速资源
-- 当资源很多时，可以不同的域名下设置`CDN`，突破浏览器限制的同一个域名下`TCP/IP`连接上限（浏览器各有不同）
+- 服务器开启`gzip`压缩
+- 大量数据计算使用`worker`
+- 使用`CDN`
+- 当资源很多时，可以不同的域名下设置`CDN`，突破浏览器限制的同一个域名下`TCP/IP`连接上限（浏览器上限各有不同）
+- 减少DOM的操作
+- 减少DOM的层级
+- 减少DOM的回流，重绘
+- 提升动画/大量回流重绘的视图到合成层避免重新渲染影响范围巨大(所有合成层都会开启硬件加速，当重绘时，只重绘自身的图层，用不好会造成大量图层提升到合成层，导致页面卡顿)
+
 
 ## 代码管理篇
 - 提交
     - fead 新功能（feature）
     - fix 修bug
-    - docs 文档
+    - docs 文档添加/更新
     - style 样式/格式变化
     - refactor 重构
     - test 添加测试
@@ -71,6 +77,7 @@
     - update 更新旧功能
     - 提交信息为（fead: xxxxx提交的消息）
 - 提交前应该通过eslint的检测
+- 前端通过husky监听commit，然后触发lint-staged，自动使用npm run lint和npm run test当校验，否则不能提交代码至仓库
 
 ## 服务器篇
 - 不了解，深入后在分享
