--- a/articles/will/规范.md
+++ b/articles/will/规范.md
@@ -1,55 +1,68 @@
 # 定制一个自己的规范
 
 ## 代码篇
-- 变量声明使用e6的`let`或`const`
+- 变量声明使用es6的`let`或`const`
 - 命名规则
     - 大驼峰
         - 组件
         - 构造函数
+        - 文件
     - 小驼峰
         - 变量
-        - 函数
-    - 下滑线
+        - 普通函数
         - css
         - @keyframe
-        - 文件
-    - 中滑线
-        - `... 持续补充`
+
 - 组件内模块的引入顺序
     - 全局包
     - 组件
     - 工具函数
-    - `... 持续补充`
-- 使用事件时，适当加入passive参数（addEventListeners的第三位参数）
-- 当在某些地方有可能出现问题时，应当有对应措施（使用`try catch`捕捉）
-- 在一些地方有可能出现命名空间问题时，应当使用`IIFE`（立即执行函数）封锁作用域
-- 代码格式化使用`vetuy`配合`prettier`来格式化`.js,.ts,.vue`,使用`prettyhtml`来格式化`html`（以上皆是vscode插件）
-- 尽量减少js直接对样式的操作，如果有，那么使用类名切换来实现，一个类名不行，那么，在来一个
-- `js`代码检查使用`eslint`，`ts`使用`@typescript/eslint`
-- 异步的地方使用`async/await`进行流程控制，`try catch`预防错误
-- 在接受外部参数、输入时，应当考虑空参数，以防止错误
-- 在多人合作时，引入包比较小众的包时应当写一些说明
-- 权衡复杂度与耦合度
+    - 类型声明 & 样式
 
+    
+- js
+    - 使用事件时，适当加入passive参数（addEventListeners的第三位参数）
+    - 当在某些地方有可能出现问题时，应当有对应措施（使用`try catch`捕捉）
+    - 在一些地方有可能出现命名空间问题时，应当使用`IIFE`（立即执行函数）封锁作用域
+    - 代码格式化使用`vetuy`配合`prettier`来格式化`.js,.ts,.vue`,使用`prettyhtml`来格式化`html`（以上皆是vscode插件）
+    - 尽量减少js直接对样式的操作，如果有，那么使用类名切换来实现，一个类名不行，那么，在来一个
+    - `j|ts`代码检查使用`eslint`，`ts`使用`@typescript/eslint`，具体规则可自己配置，可以使用`eslint-config-airhnb-base`
+    - 异步的地方使用`async/await`进行流程控制，`try catch`预防可能出现错误的地方
+    - 在接受外部参数、输入时，应当考虑空参数，以防止错误
+    - 权衡复杂度与耦合度
+    
+- 团队合作
+    - 引入小众包时应写文档说明
+    - commit 提交前缀和提交消息说明
+
+- 文件结构
+    - 全局工具函数应该放在src/utils下，以函数名或者文件总体作用命名，局部utils放在当前目录下的config中
+    - 全局配置应在顶级目录的config/下，局部配置放在当前目录下的config中
+    - 全局 | 公用组件放在src/components下，局部组件放在当前目录下的components下
+    - 全局ts类型放在根目录下的interface或src下的interface中，局部的类型声明放在当前目录下的interface中
+    - 页面组件放在src/pages下
+    - 数据管理放在src/store下
+    - 路由配置放在src/router下
+
+- eslint & prettier配置
+    - 缩进 空格
+    - 缩进长度 4
+    
 
 ## 静态资源管理
 - 静态资源全部放置在根目录下的public文件夹内
-    - 图片为`image`
-    - 字体为`font`
-    - `html`为`html`
-    - `css`为`css`
-    - `js`和`ts`为`script`
-    - 单页面程序html文件应命名为`index.html`
-- 打包后的`js`、`html`、`css`要经过压缩，js分解大小，不能太大导致加载时间过长，也不太小，导致加载请求过多（`200kb - 500kb`）
+    - 图片`image`
+    - 字体`font`
+- 打包后的`js`、`html`、`css`要经过压缩，js分解大小，不能太大导致加载时间过长，也不能太小，导致加载请求过多（`200kb - 1mb`）
 - 服务器对静态资源开启`gzip`压缩（在webpack打包时使用compress-webpack-plugin打包资源为gz文件，然后由服务端返回）
 
 ## 错误篇
 - 全局错误应该由`window.onerror`来拦截并且处理
-- 使用框架提供的catch函数来手机出现的错误
-- 上报错误到服务器
+- 使用框架提供的onerror函数来捕获错误
+- 打包出源码地图，通过源码地图还原发生错误的地址
 
 ## html篇
-- DOM的嵌套层级不应该超过20层
+- 正常情况下，DOM的嵌套层级不应该超过20层
 - 行间style应该少用
 
 ## 性能篇
@@ -59,9 +72,7 @@
 - 大量数据计算使用`worker`
 - 使用`CDN`
 - 当资源很多时，可以不同的域名下设置`CDN`，突破浏览器限制的同一个域名下`TCP/IP`连接上限（浏览器上限各有不同）
-- 减少DOM的操作
-- 减少DOM的层级
-- 减少DOM的回流，重绘
+- 减少DOM的操作、嵌套层级、回流重绘
 - 提升动画/大量回流重绘的视图到合成层避免重新渲染影响范围巨大(所有合成层都会开启硬件加速，当重绘时，只重绘自身的图层，用不好会造成大量图层提升到合成层，导致页面卡顿)
 
 
@@ -75,9 +86,10 @@
     - test 添加测试
     - chore 构建过程或辅助工具的变动
     - update 更新旧功能
-    - 提交信息为（fead: xxxxx提交的消息）
+    - 提交信息为（fead: commit消息）
 - 提交前应该通过eslint的检测
 - 前端通过husky监听commit，然后触发lint-staged，自动使用npm run lint和npm run test当校验，否则不能提交代码至仓库
+- 开发分支 dev/功能名 任务分支 feature/要完成的任务 预发布分支 release/要完成的任务 发布分支 master
 
 ## 服务器篇
 - 不了解，深入后在分享
