--- a/articles/will/ts/2_类型声明以及组合用法.md
+++ b/articles/will/ts/2_类型声明以及组合用法.md
@@ -40,10 +40,6 @@ type Foot = {
     rightWalk: () => void;
 };
 
-type Body = {};
-
-type Hand = {};
-
 type Head = {
     /** 嘴 */
     mouth: {
@@ -59,9 +55,8 @@ type Head = {
 /** 以对象的结构聚合 */
 type PersonStructure = {
     head: Head;
-    body: 1;
-    hand: 1;
     foot: Foot;
+    // 其他部位...
 };
 ```
 
@@ -71,7 +66,13 @@ type PersonStructure = {
 // 用 & 符号聚合
 type PersonStructure = {
     head: Head;
-} & { body: 1; hand: 1 } & { foot: Foot };
+} & { foot: Foot };
+
+// 赋值给变量时聚合
+const person: { head: Head } & { foot: FooT } = {
+    head: xxx,
+    foot: xxx,
+};
 ```
 
 作用
@@ -98,7 +99,7 @@ type WorkerAnt = {
     move(): void;
 } & Ant;
 
-/** 注意，这里使用 | 来枚举变量所用到的类型 */
+/** 注意，这里使用 | 来枚举变量可能存储值的类型 */
 let flyingAnt1: WorkerAnt | FlyingAnt | undefined;
 
 /** 可以整和成一个类型，还是枚举每个类型 */
@@ -120,7 +121,7 @@ if (flyingAnt1?.name === 'fly') {
 
 **基础用法**
 
-`interface` 常用于声明一个对象形式自定义类型，我们还可以使用 interface 来声明一个可以`约束函数属性和类` 的自定义类型
+`interface` 常用于声明一个对象形式自定义类型，我们还可以使用 interface 来声明一个可以`约束函数属性或类` 的自定义类型
 
 **声明一个普通自定义类型**
 
@@ -191,10 +192,6 @@ type Foot = {
     rightWalk: () => void;
 };
 
-type Body = {};
-
-type Hand = {};
-
 type Head = {
     /** 嘴 */
     mouth: {
@@ -202,12 +199,11 @@ type Head = {
         say(content: string): void;
     };
 };
+
 // 聚合在一起
 interface PersonStructure {
     foot: Foot;
-    body: Body;
-    hand: Hand;
-    Head: Head;
+    head: Head;
 }
 
 // 继承Structure中的人体结构，extends 的作用和 & 是一样的
@@ -222,7 +218,7 @@ interface Person extends PersonStructure, A, B, C {}
 
 ### enum
 
-通常，我们谈起 ts 时，必须了解一个特点，就是 ts 类型只在编译(`ts -> js`)时影响源码，但就是有这样的一个 API，它参与了 js 运行时，就是这个 enum
+通常，我们谈起 ts 时，必须了解一个特点，就是 ts 类型只存在与编译前，当转换为 js 时，根据类型来计算代码是否有错误，但转换为 js 后，js 不存在源码中写的类型，但就是有这样的一个 API，它参与了 js 运行时，就是这个 `enum`
 
 接下来我们先了解下这个 API 的特性
 
@@ -242,11 +238,27 @@ enum ColorMap {
 el.style.color = ColorMap.red;
 ```
 
+enum 会产出一个类型，这个类型所包含的意思就是，这个被赋予这个类型的变量可能是枚举中的某一个
+
+```ts
+let color: ColorMap = ColorMap.red;
+switch (color) {
+    case ColorMap.red: {
+        console.log('red');
+        break;
+    }
+    case ColorMap.blue: {
+        console.log('blue');
+        break;
+    }
+}
+```
+
 不仅仅是上面的好处
 
 当我们想要改将`red`对于的`#ff0000`从 16 进制改 rgb 时，我们可以直接改变对于的 value 即可
 
-记住 enum 开发尽量不要使用，毕竟会参与运行时，也可以对象来替代
+记住 enum 开发少使用，毕竟会参与运行时，也可以对象来替代
 
 有兴趣可以看以下 `ColorMap` 在编译成 js 后有什么变化
 
