--- a/articles/will/ts/3_类.md
+++ b/articles/will/ts/3_类.md
@@ -19,13 +19,13 @@ class ClassName extends ClassParent {}
 class ClassName {
     // 接受外部传入的参数
     // 在 constrcutor 函数执行的时候，它的方法和属性都已经挂载完毕，可以直接使用
-    constructor(...arg) {}
+    constructor(...arg: unknown[]) {}
 }
 ```
 
 ## ts 类 的作用
 
-1. 产出可实例化的类
+1. 可实例化的类
 2. 提供一个类型
 3. 可抽像
 
@@ -79,30 +79,22 @@ if (Math.random() < 0.1) {
  * 现在导航栏，导航栏中有很多button，这些button不仅仅我们内置的几个，还得外部能扩展
  * 我们需要把这个button类让外部使用，但是还得让外部知道我们这里有那些方法是在扩展时是自己必须要实现的
  */
-// 扩展事件
-abstract class ButtonExtendEvent {
+abstract class ButtonExtend {
+    // 不抽象属性，当子级实例化后可直接使用
+    el: HTMLElement = document.createElement('button');
+    constructor() {
+        this.el.style.cssText = this.getStyle();
+        this.el.addEventListener('click', this.onClick.bind(this));
+    }
+
+    // 限制返回字符串css样式
+    abstract getStyle(): string;
+    // 限制必须有onClick事件
     abstract onClick(event: Event): void;
 }
 
-// 扩展样式
-abstract class ButtonExtendStyle {
-    abstract getStyle(): string;
-}
-
-// 整合抽象类
-type ButtonExtend = ButtonExtendEvent & ButtonExtendStyle;
-
 // 外部扩展时
-class Button implements ButtonExtend {
-    el: HTMLElement;
-    constructor() {
-        const btn = (this.el = document.createElement('button'));
-        btn.style.cssText = this.getStyle();
-        btn.onclick = e => {
-            this.onClick(e);
-        };
-    }
-
+class Button extends ButtonExtend {
     onClick(e: Event) {
         // xxxx
     }
@@ -117,25 +109,54 @@ class Button implements ButtonExtend {
 
 懵的话就对了，我们来一个一个解读
 
-**`abstract`**
+**`abstract` `抽象`**
 
-英语好的小伙伴会知道，它翻译成中为就是`抽象`，那么加在 class 前，我们就可以称呼这个类叫做`抽象类`
+知道这个单词会知道，它翻译成中为就是`抽象`，那么加在 class 前，我们就可以称呼这个类叫做`抽象类`
 
-抽象类，类如其名，它是抽象的，特点就是不能被实例化，只能作为一个类型来使用
+抽象类，类如其名，它是抽象的，特点就是不能被直接实例化，只能作为一个类型或者父类来使用
 
-class 前的 abstract 叫抽象类，那么内部的方法前面带上它就可以叫做是`抽象方法`，`抽象属性`
+class 前 abstract 叫抽象类，那么内部的方法前面带上它就可以叫做是`抽象方法`，`抽象属性`
 
-单独的它可没啥大作用，接下来在介绍一个关键字
+abstract 的类在被继承(`extends`)后，会要求子类实现抽线的属性，方法
 
-**`implements`**
+**`implements` `实现`**
 
-翻译成中文叫做 `实现`
+```ts
+// 库内部
+class WorkerHandler {
+    id: number;
 
-implements 可以引入一个或多个抽象的类（不抽象的类也可以，但没啥作用，还要多写一遍）
+    run(): void {}
+}
 
-顾名思义，implements 的抽象类中的抽象属性、方法都需要被 主动 implements 的类(上方代码中的 Button 类)实现一遍
+class WorkerContainer {
+    queue: WorkerHandler[] = [];
+    constructor() {}
+
+    addWorker(w: WorkerHandler) {
+        this.queue.push(w);
+    }
+}
+
+// 用户使用
+const container = new WorkerContainer();
+
+class CompareWorker implements WorkerHandler {
+    id: 0;
+
+    run() {
+        console.log(1 + 2);
+    }
+}
+```
+
+翻译成中文叫做 `实现`，顾名思义，实现 `implements` 类中的属性、方法都需要被实现一边
+
+implements 可以引入一个或多个类（不抽象的类也可以，但没啥作用，还要多写一遍引入类的代码）
 
 不实现会怎么样（也就编译失败而已啦
+
+implements 常用于限制参数或返回值的类型，使得它们存在一些我们需要的 `方法` 或 `属性`
 
 ## 可用于类的关键字
 
@@ -143,7 +164,6 @@ implements 可以引入一个或多个抽象的类（不抽象的类也可以，
 
 ```ts
 class Person {
-    //
     public name: string = 'shang';
 
     private age: number = 18;
@@ -180,7 +200,7 @@ person.name; // success
 
 **protected**
 
-protected 子类和父类都可以获取这个属性，但是实例化后实例不能访问
+protected 子类和父类都可以获取这个属性，但是实例化后实例`(也就是类外部)`不能访问
 
 与 private 的区别就是子类可以访问此属性
 
