--- a/articles/will/ts/4_泛形与重载.md
+++ b/articles/will/ts/4_泛形与重载.md
@@ -62,7 +62,7 @@ const log = debounce<[str1: string, str2?: string, str3?: string]>((str1, str2, 
 
 <br />
 
-什么，传(chuan)了？
+什么，传`(chuan)`了？
 
 没错，就是传了。
 
@@ -176,8 +176,6 @@ function html(content?: string): string | undefined {
 但是，有了重载只有，我们可以这样写
 
 ```ts
-function html(): string;
-function html(content: string): void;
 /**
  * 获取innerHTML属性
  */
@@ -211,16 +209,16 @@ html('123123');
 
 <br />
 
-可以看上方示例，最下面的 html 我们可以叫做实现，其他的 html 可以叫做重载函数
+可以看上方示例，最下面的 `function html(content?: string): string | void ` 我们可以叫做实现，而它上面两个可以叫做重载函数，上面有两个，也就是说，`html`有两个重载函数
 
-实现：指真实的函数，但是，真实的函数需要把所有重载的函数参数在这里写一遍
+实现：指真实的函数，真实的函数需要把所有重载的函数参数在这里写一遍
 
-重载函数：要把函数参数的每一种传参方式以及返回类型列举出来
+重载函数：要把函数参数的每一种传参数量和类型以及返回类型列举出来
 
 > 重载函数每个都可以有不同的泛形，前提是你能方便的处理好实现时的输出
 
 **什么时候使用重载**
 
-参数长度不同且函数输出类型不同时
+`参数长度不同`且`函数输出类型不同`时
 
-参数类型不同且不同参数类型函数输出类型不同时
+`参数类型不同`且`参数类型不同`和`函数输出类型不同`时
