--- a/articles/will/ts/5_各种关键字以及方法.md
+++ b/articles/will/ts/5_各种关键字以及方法.md
@@ -23,7 +23,7 @@ const a = parseInt(b);
 [1, 2, 3, 4, 5].map(item => console.log(item));
 ```
 
-关键字对于我们来说很重要，它可以说是从语言成面上提供的方法，极大的提高了使用的灵活和多变性。
+关键字对于我们来说很重要，它可以说是从语言层面上提供的方法，极大的提高了使用的灵活和多变性。
 
 而一些方法则就显得不那么重要了，我们可以使用语言的基础功能和关键字去写一个一毛一样方法
 
@@ -69,9 +69,9 @@ str = (num as unknown) as string;
 
 这里解释一下，在 num 是`已经确定类型`的话，我们是不能直接强转的，TS 会觉得你是错的
 
-> [TS]： 你都确定类型了，还转类型干啥，肯定是想干啥不规范的事，先给你判断成错误写法（上面那种写法）
+> [TS]： 你都确定类型了，还转类型干啥，肯定是想干啥不规范的事，先给你判断成错误写法（第一种写法）
 >
-> [我]： 我知道这不规范，但是我就是要转（下面这种写法）
+> [我]： 我知道这不规范，但是我就是要转（第二种写法）
 >
 > // 毕竟 ts 只是一个工具，提示也给你了，也拗不过你，就只能妥协你了
 
@@ -117,7 +117,7 @@ person1 = person;
 
 ### extends
 
-extends 在 ts 中不仅只能在 `class 的继承`和 `interface 的揉和类型`这些地方使用，还能在其他地方使用。
+extends 在 ts 中不仅只能在 `class 的继承`和 `interface 的继承类型`这些地方使用，还能在其他地方使用。
 
 <br />
 
@@ -195,7 +195,7 @@ function forEach<T extends unknown[]>(arr: T, fn: (arg: T[number]) => void) {
 
 现在，ts 就会知道，这个 T 一定会是一个数组，第二个参数的`数字索引器`以及`arr.forEach`此刻就是确定的
 
-> 这个就可以说是约束的第一个好处，`泛形可以直接当做类型使用`了
+> 这个就可以说是约束的第一个好处，`被约束的泛形在某个作用域中可以直接确定类型`
 
 <br />
 
@@ -232,7 +232,7 @@ type Args = Params<typeof fun>;
 
 可以看见 Args 已经获取到 fun 这个函数的所有参数，这就是 infer 的作用
 
-但是 infer 只能在 extends 中使用，但是获取`函数参数返回值`、`class的constructor参数`
+但是 infer 只能在 extends 中使用，可用于获取`函数参数返回值`、`class的constructor参数`
 
 如果有兴趣，可以看一下 ts 内置的方法`Parameters`、`ConstructorParameters`、`ReturnType`
 
@@ -273,26 +273,23 @@ keyof 可直对类型对象进行取 key，在由`T[keyof T]`取出所有`value`
 
 ```ts
 class Person {
+    isPerson = true;
     constructor(public name: string, public age: number) {}
-    isPerson(p: Person) {
-        return this === p;
+    static isPerson(p: any): p is Person {
+        return Boolean(p && p.isPerson === true);
     }
-}
-
-function isPerson(p: any): p is Person {
-    return Boolean(p && typeof p.isPerson === 'function' && p.isPerson(p));
 }
 
 const person = new Person('shang', 18);
 
 const person2 = {};
 
-if (isPerson(person)) {
+if (Person.isPerson(person)) {
     // [ts] const person: Person
     person.name;
 }
 
-if (isPerson(person2)) {
+if (Person.isPerson(person2)) {
     // [ts] const person2: Person
     person2.age;
 }
@@ -300,10 +297,10 @@ if (isPerson(person2)) {
 
 解读一下 isPerson 函数
 
-isPerson 最后的 `p is Person`就是`is`的用法
+Person.isPerson 最后的 `p is Person`就是`is`的用法
 
 1. `isPerson` 接受一个`参数p`
-2. 如果有 p 存在且 p.isPerson 且为函数，那么执行它，并且把`参数p`传进去，在有 isPerson
+2. p 存在，且 p 身上的 isPerson 为 true
 3. 返回结果然后用 Boolean 转换为布尔值
 
 如果为 true，那么最后 p，会被认定为 `Person`，如果为 false，那么就不是 `Person`
@@ -408,10 +405,10 @@ type T3 = {
 
 这些方法我就不一一解释，
 
-有兴趣大家可以在自行搜索一下 ts 关键字，这里咱就只说几个实现
+有兴趣大家可以在自行搜索一下 ts 方法，这里咱就只说几个实现
 
 ```ts
-// 将对象所有属性划分为可选
+// 将对象所有属性转换为可选
 type Partial<T> = {
     [P in keyof T]?: T[P];
 };
@@ -429,8 +426,6 @@ type Extract<T, U> = T extends U ? T : never;
 <br />
 
 ## 结尾
-
-其实 ts 中还有很多没有讲，但是需要时间慢慢沉淀
 
 [大家有兴趣可以去代码这里看看其他内容](https://jkchao.github.io/typescript-book-chinese/#why)
 
